<resources>
    <string name="app_name">Oye Loans</string>
    <string name="facebook_app_id">187871314968637</string>
    <string name="fb_login_protocol_scheme">fb187871314968637</string>
    <string name="title_activity_account_summary">AccountSummaryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menuimage">MenuImage</string>
    <string name="title_activity_my_profile_page">My Profile</string>
    <string name="apply_loan_first_page">Loan Application - First Page</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="email_id">Email ID</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="street_address">Street</string>
    <string name="door_address">Door/Flat No</string>
    <string name="area_address">Area</string>
    <string name="city_address">City</string>
    <string name="PIN_address">PIN Code</string>
    <string name="state_address">State</string>
    <string name="save">Save</string>
    <string name="welcomeToOyeLoans">Welcome to Oye Loans!</string>
    <string name="loginMessage">We are here to help you with your immediate financial needs,get money in 24 hours*.\n Please login using your facebook account to apply.</string>
    <string name="HowItWorks"><u><b><i>How it works?</i></b></u></string>
    <string name="title_activity_profile_page">"My Profile"</string>
    <string name="dummyAddress">Pacifica Tech Park, 101A, First Floor, 23, Old Mahabalipuram Road, Navallur, Chennai, Tamil Nadu 603103</string>
    <string name="dummyEmployment">Your employer name</string>
    <string name="dummySocial">https://facebook.com/satheesh4590</string>
    <string name="dummPhoneNumber">9176034562</string>
    <string name="educationTitle">Education</string>
    <string name="DOBTitle"><![CDATA[DOB & Age]]></string>
    <string name="dummyDOBAndAge">1990-05-26 26 years old</string>
    <string name="dummyTotalExp">5 Years</string>
    <string name="profileProceedButton">Save</string>
    <string name="AmountDue">Amount Due</string>
    <string name="MakeAPayment">Make A Payment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="proceedToPay">Proceed To Pay</string>
    <string name="proceedAppFlowButton">Proceed</string>
    <string name="interestRateLoanAppFlow">Interest Rate of 25% to be paid in 12 months</string>
    <string name="inviteMe">Invite Friends</string>
    <string name="verifyBtn">Verify</string>
    <string name="applyLoanBtn">Get Cash</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="makePayment">Make Payment</string>
    <string name="addNewDebitCard">Add New Card</string>
    <string name="AddCardScreen">Add New Card</string>
    <string name="payment_succeeded">Payment Succeeded</string>
    <string name="ok_button">OK</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="Application_completed">Application Submitted!!</string>
    <string name="Application_completed_message">You will receive communication regarding your loan status within 24 hours on your loan application. </string>
    <string name="Application_completed_thanks">Thank you for completing the application</string>
    <string name="application_failed">Loan Application Failed</string>
    <string name="application_failed_message">Sorry we could not approve your loan at this time on account of the information you provided.</string>
    <string name="application_failed_sub_message">Please visit our Help / FAQ page if you have any questions</string>
    <string name="highestEducationTitle">Highest Education</string>
    <string name="editProfileSaveButton">Save and Proceed</string>
    <string name="appointment_title">Fix an Appointment</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="loan_approved">Congratuations!!</string>
    <string name="tell_us_why">Tell us why you need these funds?</string>
    <string name="submit_reason">Submit</string>
    <string name="loan_reason_icon">Loan Reason Icon</string>
    <string name="loan_declined">Extremely Sorry!</string>
    <string name="what_to_do">What else can I do now?</string>
    <string name="share_referall">Refer Your friends. You\'ll get Rs.250 FlipKart Voucher upon their successful application</string>
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofences_added">Fences Added</string>
    <string name="geofences_removed">Fences Removed</string>
    <string name="button_product_tour">product tour</string>
    <string name="welcom_head_01">Apply for a Loan on the go</string>
    <string name="welcom_content_01"> <node>&#x2022;</node> Loans up to Rs.1 Lakh with ultra fast processing and approvals. \n<node>&#x2022;</node>     Simplified documentation. \n<node>&#x2022;</node> Competitive pricing and complete transparency</string>
    <string name="welcom_head_02">No more long boring forms!</string>
    <string name="welcom_content_02"><node>&#x2022;</node> Just fill few details with our interactive forms \n<node>&#x2022;</node> We will help you in every step \n<node>&#x2022;</node> That\'s it you are good to go! </string>
    <string name="welcom_head_03">We will verify all your details</string>
</resources>