<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditMyProfilePage"
    app:behavior_overlapTop="30dp"
    tools:showIn="@layout/profile_page"
    android:background="@android:color/white"
    android:scrollbars="none">


    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="80dp"
        app:contentPadding="16dp"
        >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/firstName"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content" />

            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/lastName"
                    android:textSize="18sp"
                    />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/email_id"
                    android:textSize="18sp"
                    />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/mobileNumber"
                    android:textSize="18sp"
                    />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/door_address"
                    android:textSize="18sp"
                    />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/street_address"
                    android:textSize="18sp"
                    />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/area_address"
                    android:textSize="18sp"
                    />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/city_address"
                    android:textSize="18sp"
                    />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/PIN_address"
                    android:textSize="18sp"
                    />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="50"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/state_address"
                    android:textSize="18sp"
                    />

                <EditText
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

            </TableRow>

            <TableRow>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/save"
                    android:background="@drawable/rounded_button_shape"
                    android:textColor="@android:color/white"
                    android:layout_span="2"
                    android:layout_weight="100"
                    android:padding="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:id="@+id/save_profile_button"
                    />
            </TableRow>

        </TableLayout>


    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>