<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oozmakappa.oyeloans.ApplicationCompletedActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="50dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/success_icon" />

            <include layout="@layout/item_divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/Application_completed"
                android:textSize="24sp"
                android:paddingTop="5dp"/>


            <TextView
                android:id="@+id/new_credit_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Application_completed_thanks"
                android:textSize="16sp"
                android:drawablePadding="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/available_amount_redraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Application_completed_message"
                android:textSize="16sp"
                android:drawablePadding="10dp"
                android:textAlignment="center"/>

            <include layout="@layout/item_divider"/>

            <Button
                android:id="@+id/payment_success_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/ok_button"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:background="@drawable/rounded_button_shape"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>
</RelativeLayout>
