<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oozmakappa.oyeloans.PaymentSucceededActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="30dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/loan_approved" />

            <include layout="@layout/item_divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/loan_approved"
                android:textSize="30sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/loan_approved_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your Loan application (#424252) with us,has been approved by us and we will deposit your approved amount of Rs.4000 at the earliest. You will get an email intimation of the same."
                android:textSize="16sp"
                android:drawablePadding="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"/>

            <include layout="@layout/item_divider"/>

            <Button
                android:id="@+id/tell_us_loan_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/tell_us_why"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/loan_approved_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/ok_button"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:textColor="@color/WhiteColor"

                android:background="@drawable/rounded_button_shape"
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
