<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oozmakappa.oyeloans.LoanRejectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="30dp" >

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/error_icon" />

            <include layout="@layout/item_divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/loan_declined"
                android:textSize="30sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/loan_rejection_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unfortunately your Loan application (#424252) was rejected. We are extremely sorry and hope to do business with you in the future though. You will get an email intimation of the same."
                android:textSize="16sp"
                android:drawablePadding="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"/>

            <include layout="@layout/item_divider"/>

            <Button
                android:id="@+id/what_to_do"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/what_to_do"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorPrimary"
                />

            <Button
                android:id="@+id/loan_rejected_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/ok_button"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:textColor="@color/WhiteColor"
                android:background="@drawable/rounded_button_shape"
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

